--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -3,14 +3,20 @@
     class="m-auto shadow-md p-10 space-y-6 min-w-md hover:shadow-xl border border-gray-200"
   >
     <h1 class="text-2xl font-bold text-blue-600 text-center">Admin Login</h1>
-    <form action="">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="flex flex-col space-y-2 mb-4 px-4 py-2">
         <label for="">Email</label>
         <input
           type="email"
           placeholder="Enter Your Email"
           class="py-2 border border-gray-300 px-2 rounded-sm outline-none"
+          formControlName="email"
         />
+        @if (loginForm.get('email')?.invalid && loginForm.get('email')?.touched) {
+          @if () {
+            
+          }
+        }
       </div>
       <div class="flex flex-col space-y-2 px-4 py-2 mb-4">
         <label for="">Password</label>
@@ -18,6 +24,7 @@
           type="password"
           placeholder="Enter Your Password"
           class="py-2 border border-gray-300 px-2 rounded-sm outline-none"
+          formControlName="password"
         />
       </div>
       <div class="w-full px-4 py-2">
