--- a/src/app/admin/hotel/hotel-form/hotel-form.component.html
+++ b/src/app/admin/hotel/hotel-form/hotel-form.component.html
@@ -55,6 +55,16 @@
   </div>
 
   <div class="flex flex-col space-y-1">
+    <label for="image" class="font-medium text-gray-700">Image</label>
+    <input
+      type="text"
+      id="image"
+      formControlName="image"
+      class="border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+    />
+  </div>
+
+  <div class="flex flex-col space-y-1">
     <label for="phoneNumber" class="font-medium text-gray-700"
       >Phone Number</label
     >
