--- a/src/app/admin/room/room-form/room-form.component.html
+++ b/src/app/admin/room/room-form/room-form.component.html
@@ -36,6 +36,18 @@
   </div>
 
   <div class="flex flex-col space-y-1">
+    <label for="pricePerNight" class="font-medium text-gray-700"
+      >Image</label
+    >
+    <input
+      type="text"
+      id="image"
+      formControlName="image"
+      class="border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+    />
+  </div>
+
+  <div class="flex flex-col space-y-1">
     <label for="roomStatus" class="font-medium text-gray-700">Status</label>
     <select
       name="roomStatus"
