--- a/src/app/pages/hotel-list/filter/filter.component.html
+++ b/src/app/pages/hotel-list/filter/filter.component.html
@@ -1,30 +1,77 @@
+@if (changeSearch()) {
 <div class="bg-white mb-6 p-4 rounded-md border border-gray-200">
   <p class="font-semibold mb-3">Your Search</p>
   <div class="flex flex-col gap-2">
     <label for="" class="text-sm text-gray-500">Destination</label>
-    <input type="text" class="font-medium py-2 px-2" />
+    <input
+      type="text"
+      class="font-medium py-2 px-2"
+      [(ngModel)]="destination"
+    />
   </div>
   <div class="flex justify-between mt-2">
     <div class="flex flex-col">
       <label for="" class="text-sm text-gray-500">Check-in</label>
-      <input type="date" class="py-2 px-2" />
+      <input type="date" class="py-2 px-2" [(ngModel)]="checkin" />
     </div>
     <div class="flex flex-col">
       <label for="" class="text-sm text-gray-500">Check-out</label>
-      <input type="date" class="py-2 px-2" />
+      <input type="date" class="py-2 px-2" [(ngModel)]="checkout" />
+    </div>
+  </div>
+  @if (dateValidation()) {
+  <p class="text-xs text-red-600 p-2">{{ message() }}</p>
+  }
+</div>
+} @else {
+<div class="bg-white mb-6 p-4 rounded-md border border-gray-200">
+  <p class="font-semibold mb-3">Your Search</p>
+  <div class="flex flex-col gap-2">
+    <label for="" class="text-sm text-gray-500">Destination</label>
+    @if (destination()) {
+    <p class="border px-4 py-2 ">{{ destination() }}</p>
+    } @else {
+    <p class="border px-4 py-4 border-gray-200"></p>
+    }
+  </div>
+  <div class="flex justify-between mt-2">
+    <div class="flex flex-col">
+      <label for="" class="text-sm text-gray-500">Check in</label>
+      @if (checkin()) {
+      <p class="border py-2 px-4">{{ checkin() }}</p>
+      } @else {
+      <p class="border py-3 px-4 border-gray-200"></p>
+      }
+    </div>
+    <div class="flex flex-col">
+      <label for="" class="text-sm text-gray-500">check out</label>
+      @if(checkout()){
+      <p class="border py-2 px-4">{{ checkout() }}</p>
+      } @else {
+      <p class="border py-3 px-4 border-gray-200"></p>
+      }
     </div>
   </div>
   <p
     class="text-center mt-3 text-sm primary hover:underline hover:cursor-pointer"
+    (click)="onChangeSearch()"
   >
     Change Search
   </p>
 </div>
+}
+
 <div class="px-2">
   <p class="font-semibold mb-3">Filter by</p>
   <div>
     <p class="font-medium mb-2">Price Range</p>
-    <input type="range" min="50" max="1000" class="w-full" />
+    <input
+      type="range"
+      min="50"
+      max="1000"
+      class="w-full"
+      [(ngModel)]="price"
+    />
     <div class="flex justify-between mt-1">
       <p class="text-sm text-gray-600">$50</p>
       <p class="text-sm text-gray-600">$1000+</p>
@@ -54,8 +101,10 @@
     <label for="">1 Stars</label>
   </div>
 </div> -->
+
 <button
   class="mt-4 w-full bg-blue-600 text-white font-semibold py-2.5 rounded-md hover:bg-blue-700 transition-colors"
+  (click)="onApplyFilter()"
 >
   Apply Filters
 </button>
