--- a/src/app/pages/hotel-list/hotel-list.component.html
+++ b/src/app/pages/hotel-list/hotel-list.component.html
@@ -6,11 +6,10 @@
   </div>
   <div class="red w-[70%] p-6">
     <div class="flex justify-between">
-      <h2 class="text-xl font-bold">New York: 257 hotels found</h2>
+      <h2 class="text-xl font-bold">{{destination()}} {{destination() ? ':' : ''}} {{hotelList().length}} hotels found</h2>
       <div class="flex items-center gap-2">
         <p>Sort by:</p>
         <select name="" id="" class="p-2">
-          <option value="">Recommended</option>
           <option value="">Price (low to high)</option>
           <option value="">Guest Rating</option>
         </select>
@@ -24,7 +23,7 @@
         <div class="flex shadow-sm hover:shadow-md">
           <img
             class="w-1/3 h-48 overflow-hidden"
-            [src]=""
+            [src]="hotel.image"
             [alt]="hotel.name"
           />
           <div class="flex justify-between w-full p-6">
@@ -38,15 +37,16 @@
               <div class="flex flex-col items-end">
                 <span
                   class="bg-blue-600 text-white font-bold text-sm px-2 py-1 rounded"
-                  >55</span
+                  >{{hotel.customerRating}}</span
                 >
-                <p class="text-xs mt-1 text-gray-500">Excellent</p>
+                <p class="text-xs mt-1 text-gray-500">{{getFeedback(hotel.customerRating)}}</p>
               </div>
               <div class="flex flex-col items-end">
-                <p class="text-xl font-bold">$55</p>
+                <p class="text-xl font-bold">${{hotel.pricePerNight}}</p>
                 <p class="text-xs mt-1 text-gray-500">per night</p>
                 <button
-                  class="mt-2 px-4 py-2 bg-blue-600 text-white text-sm font-semibold rounded-md hover:bg-blue-700"
+                  class="mt-2 px-4 py-2 bg-blue-600 text-white text-sm font-semibold rounded-md hover:bg-blue-700 cur"
+                  [routerLink]="['/hotel-details', hotel.id]"
                 >
                   View Details
                 </button>
