--- a/src/app/admin/room/room-form/room-form.component.html
+++ b/src/app/admin/room/room-form/room-form.component.html
@@ -36,9 +36,7 @@
   </div>
 
   <div class="flex flex-col space-y-1">
-    <label for="pricePerNight" class="font-medium text-gray-700"
-      >Image</label
-    >
+    <label for="pricePerNight" class="font-medium text-gray-700">Image</label>
     <input
       type="text"
       id="image"
